--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Seu Nome">
-    <title>Portfólio de [Maria Cemolin]</title>
+    <title>Portfólio de [Ryan oliveira]</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -21,8 +21,8 @@
 
     <section id="sobre">
         <h1>Bem-vindo ao meu portfólio!</h1>
-        <p>Olá, me chamo Maria Eduarda Cemolin sou estudante do ensino médio no colégio Estadual Marins, sou da turma de exatas.</p>
-        <p>Além de estudar, também trabalho na academia Mais mulher dia de semana e final de semana na padaria Divina Padoka.
+        <p>Olá, me chamo Ryan oliveira de santana sou estudante do ensino médio no colégio Estadual Marins, sou da turma de exatas.</p>
+        <p>Além de estudar, também trabalho no ginásio Bolana rede.
                  Aqui vou colocar meus objetivos e oque vou fazer para realiza-los </p>
     </section>
 
@@ -53,8 +53,8 @@
 
     <section id="contato">
         <h2>Contato</h2>
-        <p>Email:maria.escola.pr.gov.br</p>
-        <p>Redes sociais: Instagram; dudacemolin</p>
+        <p>Email:Ryan.oliveira.santana@escola.pr.gov.br</p>
+        <p>Redes sociais: Instagram; Ryansantana07</p>
         <ul>
             <li><a href="https://www.linkedin.com/in/seulinkedin" target="_blank">LinkedIn</a></li>
             <li><a href="https://github.com/seuusuario" target="_blank">GitHub</a></li>
@@ -63,7 +63,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2025 [Maria Cemolin]. Todos os direitos reservados.</p>
+        <p>&copy; 2025 " [ryan santana]></div>. Todos os direitos reservados.</p>
     </footer>
 
     <script src="script.js"></script>
