--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <section id="trabalhos">
         <h2>Meus Trabalhos</h2>
         <div class="trabalho">
-            <img src="imagem_trabalho1.jpg" alt="Trabalho 1">
+            <img src="./WhatsApp Image 2025-04-25 at 12.02.47 (1).jpeg" alt="Trabalho 1">
             <h3>Trabalho 1</h3>
             <p>Descrição do projeto 1. Tecnologias usadas: HTML, CSS, JavaScript.</p>
         </div>
