--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <p>Descrição do projeto 1. Tecnologias usadas: HTML, CSS, JavaScript.</p>
         </div>
         <div class="trabalho">
-            <img src="imagem_trabalho2.jpg" alt="Trabalho 2">
+            <img src="./fatecie.png" alt="Trabalho 2">
             <h3>Trabalho 2</h3>
             <p>Descrição do projeto 2. Tecnologias usadas: Python, Django.</p>
         </div>
