--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div class="trabalho">
             <img src="./WhatsApp Image 2025-04-25 at 12.02.47 (1).jpeg" alt="Trabalho 1">
             <h3>Trabalho 1</h3>
-            <p>Descrição do projeto 1. Tecnologias usadas: HTML, CSS, JavaScript.</p>
+            <p>me chamo Ryan oliveira de santana, nasci em 25/08/2007. sou estudante do ensino medio do colegio Dr. Marins Alves De Camargo, trabalho no ginasio bola na rede futsal</p>
         </div>
         <div class="trabalho">
             <img src="./fatecie.png" alt="Trabalho 2">
