--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     <section id="trabalhos">
         <h2>Meus Trabalhos</h2>
-        <div class="trabalho">
+        <div class="sobre eu">
             <img src="./WhatsApp Image 2025-04-25 at 12.02.47 (1).jpeg" alt="Trabalho 1">
             <h3>Trabalho 1</h3>
             <p>me chamo Ryan oliveira de santana, nasci em 25/08/2007. sou estudante do ensino medio do colegio Dr. Marins Alves De Camargo, trabalho no ginasio bola na rede futsal</p>
