--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <div class="trabalho">
             <img src="./fatecie.png" alt="Trabalho 2">
             <h3> faculdade</h3>
-            <p>Descrição do projeto 2. Tecnologias usadas: Python, Django.</p>
+            <p>Quero fazer faculdade de Fisioterapia, trabalhar como fisioterapeuta na área dos espotes de prefêrencia contratado por algum clube.</p>
         </div>
         <!-- Adicione mais trabalhos conforme necessário -->
     </section>
