--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </section>
 
     <section id="trabalhos">
-        <h2>Meus Trabalhos</h2>
+        <h2> Biografia</h2>
         <div class="trabalho">
             <img src="./WhatsApp Image 2025-04-25 at 12.02.47 (1).jpeg" alt="Trabalho 1">
             <h3>sobre eu</h3>
